# richat

./: Cargo.toml  REVIEW_plugin-agave_richat_2026-03-08.md  SHM_OPTIMIZATION.md
.claude/: CLAUDE.md  settings.local.json
benches/: Cargo.toml
benches/benches/bloom-prefilter/: main.rs  transaction.rs
cli/: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  shm.rs
docs/: architecture-shm-v2.md  grpc-subscription-load-ranking.md  shm-metadata-v2-status.md
plugin-agave/: build.rs  config.json
plugin-agave/src/: channel.rs  config.rs  lib.rs  plugin.rs  version.rs
plugin-agave/src/protobuf/: message.rs  mod.rs
plugin-agave/src/protobuf/encoding/: mod.rs
richat/: Cargo.toml  build.rs  config.yml
richat/src/: channel.rs  config.rs  lib.rs  metrics.rs  source.rs  storage.rs  version.rs
richat/src/grpc/: config.rs  server.rs
richat/src/pubsub/: tracker.rs
richat/src/richat/: config.rs  server.rs
shared/: Cargo.toml
shared/src/: version.rs
shared/src/transports/: grpc.rs  mod.rs  shm.rs
