[package]
name = "richat-client"
version = "8.1.1"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Client Library"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = true

[dependencies]
affinity-linux = { workspace = true }
futures = { workspace = true }
kanal = { workspace = true }
memmap2 = { workspace = true }
richat-shared = { workspace = true, features = ["config", "transports"] }
serde = { workspace = true }
solana-clock = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }

[lints]
workspace = true
